Fixed layout issue

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 body {
+    overflow: scroll;
     font-family: 'Raleway', sans-serif;
     width: auto;
-    min-height: 100vh;
+    min-height:100vh;
     margin: 0;
     color: white;
     background: hsl(221, 51%, 16%);
     max-width: 100vw;
+    padding-bottom: 30px;
 }
 
 @media only screen and (max-width: 599px) {
@@ -78,10 +80,9 @@ a {
 }
 
 .container {
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 30px;
-    padding-bottom: 30px;
 }
 
 .article {
